sugar/tests/success/layout_cut.mx
c : _|_ |-
cut
    a : _|_ -> a
    b : 1   -> let () = b in c
