sugar/tests/fail/bang.mx
a : 1 |-
let z = demand a in z
